--- a/apps/morrison-developers/tsconfig.json
+++ b/apps/morrison-developers/tsconfig.json
@@ -17,16 +17,25 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "../../apps/xulf/.next/types/**/*.ts",
-    "../../dist/apps/xulf/.next/types/**/*.ts",
-    "next-env.d.ts"
+    "../../apps/morrison-developers/.next/types/**/*.ts",
+    "../../dist/apps/morrison-developers/.next/types/**/*.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
