--- a/apps/morrison-developers/project.json
+++ b/apps/morrison-developers/project.json
@@ -5,14 +5,5 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project morrison-developers --web",
-  "targets": {
-    "serve": {
-      "executor": "@nrwl/next:build",
-      "options": {
-        "port": 4201,
-        "buildTarget": "morrison-developers:build",
-        "hmr": true
-      }
-    }
-  }
+  "targets": {}
 }
