--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-is": "18.3.1",
+    "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@nrwl/react": "^19.8.0",
+    "@nx/cypress": "19.8.0",
     "@nx/devkit": "19.8.0",
     "@nx/eslint": "19.8.0",
     "@nx/eslint-plugin": "19.8.0",
@@ -39,17 +42,23 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/plugin-emotion": "^2.5.67",
+    "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-is": "18.3.0",
+    "@types/styled-components": "5.1.26",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.7.0",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^13.13.0",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "2.30.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-playwright": "^1.6.2",
