--- a/libs/shared-ui/package.json
+++ b/libs/shared-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xulf/ui-components",
+  "name": "@xulf/shared-ui",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
