--- a/package.json
+++ b/package.json
@@ -34,10 +34,18 @@
     "@nx/next": "19.8.0",
     "@nx/playwright": "19.8.0",
     "@nx/react": "19.8.0",
+    "@nx/storybook": "19.8.0",
     "@nx/vite": "19.8.0",
     "@nx/web": "19.8.0",
     "@nx/workspace": "19.8.0",
     "@playwright/test": "^1.36.0",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "^8.2.8",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -70,6 +78,7 @@
     "nx": "19.8.0",
     "prettier": "^2.6.2",
     "projects": "^1.6.1",
+    "storybook": "^8.2.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
