--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -5,7 +5,6 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "jsxImportSource": "@emotion/react",
     "types": ["vite/client"]
   },
   "files": [],
@@ -18,5 +17,5 @@
       "path": "./tsconfig.spec.json"
     }
   ],
-  "extends": "../../tsconfig.base.json"
+  "extends": "../tsconfig.base.json"
 }
