--- a/libs/layouts/.babelrc
+++ b/libs/layouts/.babelrc
@@ -8,13 +8,5 @@
       }
     ]
   ],
-  "plugins": [
-    [
-      "styled-components",
-      {
-        "pure": true,
-        "ssr": true
-      }
-    ]
-  ]
+  "plugins": []
 }
