--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/next": "^6.0.22",
+    "@mui/joy": "^5.0.0-beta.48",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
