add max-width container

--- a/libs/ui/tsconfig.json
+++ b/libs/ui/tsconfig.json
@@ -10,7 +10,12 @@
     "declaration": true
   },
   "files": [],
-  "include": [],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx"
+  ],
   "references": [
     {
       "path": "./tsconfig.lib.json"
