--- a/libs/layouts/tsconfig.json
+++ b/libs/layouts/tsconfig.json
@@ -5,10 +5,17 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "composite": true,
+    "declaration": true
   },
   "files": [],
-  "include": [],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx"
+  ],
   "references": [
     {
       "path": "./tsconfig.lib.json"
