--- a/libs/ui/tsconfig.json
+++ b/libs/ui/tsconfig.json
@@ -11,10 +11,8 @@
   },
   "files": [],
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "src/**/*.jsx"
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "references": [
     {
