--- a/libs/layouts/tsconfig.lib.json
+++ b/libs/layouts/tsconfig.lib.json
@@ -7,7 +7,9 @@
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts",
       "vite/client"
-    ]
+    ],
+    "composite": true,
+    "declaration": true
   },
   "exclude": [
     "**/*.spec.ts",
@@ -17,7 +19,10 @@
     "**/*.spec.js",
     "**/*.test.js",
     "**/*.spec.jsx",
-    "**/*.test.jsx"
+    "**/*.test.jsx",
+    "jest.config.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts"
   ],
-  "include": ["layouts/src/**/*.js", "layouts/src/**/*.jsx", "layouts/src/**/*.ts", "layouts/src/**/*.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
