--- a/apps/nicoletta-portfolio/.env.local
+++ b/apps/nicoletta-portfolio/.env.local
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_ym5d1a9
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_6f9y8jr
 NEXT_PUBLIC_EMAILJS_USER_ID=ByP6s0S2KP764l6dn
-NEXT_PUBLIC_EMAILJS_TO=morrison.andrew422@gmail.com
+NEXT_PUBLIC_EMAILJS_TO=Nicolettaberrysoprano@gmail.com
