--- a/apps/nicoletta-portfolio/nicoletta-portfolio-e2e/project.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-e2e/project.json
@@ -1,7 +1,7 @@
 {
   "name": "nicoletta-portfolio-e2e",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/nicoletta-portfolio-e2e/src",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/nicoletta-portfolio/nicoletta-portfolio-e2e/src",
   "tags": [],
   "implicitDependencies": ["nicoletta-portfolio"],
   "// targets": "to see all targets run: nx show project nicoletta-portfolio-e2e --web",
