--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@nx/storybook": "19.8.0",
     "@nx/vite": "19.8.0",
     "@nx/web": "19.8.0",
+    "@nx/webpack": "19.8.0",
     "@nx/workspace": "19.8.0",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@storybook/addon-essentials": "^8.2.8",
     "@storybook/addon-interactions": "^8.2.8",
     "@storybook/core-server": "^8.2.8",
@@ -49,7 +51,9 @@
     "@storybook/react-vite": "^8.2.8",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.2",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/plugin-emotion": "^2.5.67",
@@ -81,6 +85,7 @@
     "nx": "19.8.0",
     "prettier": "^2.6.2",
     "projects": "^1.6.1",
+    "react-refresh": "^0.10.0",
     "storybook": "^8.2.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -88,7 +93,8 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   },
   "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
 }
