--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,78 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 permissions:
   actions: read
   contents: read
 
 jobs:
-  main:
+  setup:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Fetch full history for Nx affected command accuracy
 
-      # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
-
-      # Cache node_modules
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: "20"  # Specify Node.js version
+          cache: 'npm'        # Caches npm packages automatically
 
-      - run: npm ci --legacy-peer-deps
-      - uses: nrwl/nx-set-shas@v4
+      # Cache Nx and node_modules for faster CI builds
+      - name: Cache Nx and Node Modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            ~/.npm
+            ~/.cache/nx
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/nx.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: npx nx-cloud record -- echo Hello World
-      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      # - run: npx nx affected -t lint test build e2e-ci
+      # Start Nx Cloud CI run with task distribution
+      - name: Start Nx Cloud Distributed Task Execution
+        run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e"
+
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
+  lint:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run affected lint
+        run: npx nx affected --target=lint --parallel=3
+
+  test:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run affected tests
+        run: npx nx affected --target=test --parallel=3
+
+      - name: TypeScript Type Checking
+        run: npx nx affected --target=type-check --parallel=3
+
+      - name: Security Vulnerability Scanning
+        run: npm audit --audit-level=high
+
+      - name: Accessibility Checks
+        run: npx pa11y-ci
+
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run affected build
+        run: npx nx affected --target=build --parallel=3
