--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
         with:
           node-version: "20"  # Specify Node.js version
           cache: 'npm'        # Caches npm packages automatically
-
+      # install dependencies
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
       # Cache Nx and node_modules for faster CI builds
       - name: Cache Nx and Node Modules
         uses: actions/cache@v3
