--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
     "allowJs": true,
@@ -26,8 +26,8 @@
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "../../apps/morrison-developers/.next/types/**/*.ts",
-    "../../dist/apps/morrison-developers/.next/types/**/*.ts",
+    ".next/types/**/*.ts",
+    "../../dist/apps/nicoletta-portfolio/.next/types/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
