--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.11.1",
+    "@emotion/react": "^11.11.1",
     "@emotion/server": "11.11.0",
-    "@emotion/styled": "11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/next": "^6.0.22",
+    "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.1.10",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.3",
