--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@mantine/next": "^6.0.22",
     "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
-    "@vercel/analytics": "^1.4.1",
     "@mui/material": "^6.1.10",
+    "@vercel/analytics": "^1.4.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.3",
@@ -57,6 +57,7 @@
     "@swc/helpers": "~0.5.11",
     "@swc/plugin-emotion": "^2.5.67",
     "@swc/plugin-styled-components": "^1.5.67",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
