--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
+    "react-use-precision-timer": "^3.5.5",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   },
