--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/project.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/project.json
@@ -1,9 +1,25 @@
 {
   "name": "nicoletta-portfolio",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/nicoletta-portfolio",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project nicoletta-portfolio --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nrwl/next:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/nicoletta-portfolio"
+      },
+      "configurations": {
+        "production": {}
+      }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx vercel --cwd=apps/nicoletta-portfolio/nicoletta-portfolio-app --token=$VERCEL_TOKEN --prod"
+      }
+    }
+  }
 }
