--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     "../../dist/apps/nicoletta-portfolio/.next/types/**/*.ts",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "../../../dist/apps/nicoletta-portfolio/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
