--- a/apps/sweet-sye/sweet-sye-app/project.json
+++ b/apps/sweet-sye/sweet-sye-app/project.json
@@ -4,6 +4,22 @@
   "sourceRoot": "apps/sweet-sye",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project sweet-sye --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nrwl/next:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/sweet-sye"
+      },
+      "configurations": {
+        "production": {}
+      }
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx vercel --cwd=apps/sweet-sye/sweet-sye-app --token=$VERCEL_TOKEN --prod"
+      }
+    }
+  }
 }
