--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.10",
     "@vercel/analytics": "^1.4.1",
+    "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
-    "next": "14.2.3",
+    "hawk": "^9.0.2",
+    "next": "^14.2.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
@@ -51,7 +53,7 @@
     "@storybook/core-server": "^8.2.8",
     "@storybook/jest": "^0.2.3",
     "@storybook/react-vite": "^8.2.8",
-    "@storybook/test-runner": "^0.13.0",
+    "@storybook/test-runner": "^0.21.0",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -71,19 +73,20 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^13.13.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
-    "nx": "19.8.0",
+    "nx": "^20.3.3",
     "prettier": "^2.6.2",
     "projects": "^1.6.1",
     "storybook": "^8.2.8",
@@ -92,7 +95,7 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
+    "vite-plugin-dts": "^4.5.0",
     "vitest": "^1.3.1"
   },
   "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
