--- a/apps/sweet-sye/sweet-sye-app/project.json
+++ b/apps/sweet-sye/sweet-sye-app/project.json
@@ -9,7 +9,9 @@
       "executor": "@nrwl/next:build",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/sweet-sye"
+        "outputPath": "dist/apps/sweet-sye",
+        "root": "apps/sweet-sye",
+        "config": "next.config.js"
       },
       "configurations": {
         "production": {}
