--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/project.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/project.json
@@ -9,7 +9,9 @@
       "executor": "@nrwl/next:build",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/nicoletta-portfolio"
+        "outputPath": "dist/apps/nicoletta-portfolio",
+        "root": "apps/nicoletta-portfolio",
+        "config": "next.config.js"
       },
       "configurations": {
         "production": {}
