--- a/apps/morrison-developers/morrison-developers-e2e/project.json
+++ b/apps/morrison-developers/morrison-developers-e2e/project.json
@@ -5,5 +5,13 @@
   "tags": [],
   "implicitDependencies": ["morrison-developers"],
   "// targets": "to see all targets run: nx show project morrison-developers-e2e --web",
-  "targets": {}
+  "targets": {
+    "e2e-ci": {
+      "executor": "@nrwl/cypress:cypress",
+      "options": {
+        "cypressConfig": "apps/morrison-developers/morrison-developers-e2e/cypress.config.ts",
+        "devServerTarget": "morrison-developers-e2e:e2e-ci"
+      }
+    }
+  }
 }
