--- a/apps/morrison-developers/morrison-developers-e2e/project.json
+++ b/apps/morrison-developers/morrison-developers-e2e/project.json
@@ -1,17 +1,9 @@
 {
   "name": "morrison-developers-e2e",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/morrison-developers-e2e/src",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "apps/morrison-developers/morrison-developers-e2e/src",
   "tags": [],
   "implicitDependencies": ["morrison-developers"],
   "// targets": "to see all targets run: nx show project morrison-developers-e2e --web",
-  "targets": {
-    "e2e-ci": {
-      "executor": "@nrwl/cypress:cypress",
-      "options": {
-        "cypressConfig": "apps/morrison-developers/morrison-developers-e2e/cypress.config.ts",
-        "devServerTarget": "morrison-developers:serve"
-      }
-    }
-  }
+  "targets": {}
 }
