--- a/apps/sweet-sye/sweet-sye-app/vercel.json
+++ b/apps/sweet-sye/sweet-sye-app/vercel.json
@@ -3,15 +3,9 @@
   "name": "sweet-sye",
   "builds": [
     {
-      "src": "apps/sweet-sye/sweet-sye-app/next.config.js",
+      "src": "apps/sweet-sye/sweet-sye-app",
       "use": "@vercel/next"
     }
   ],
-  "framework": "nextjs",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "apps/sweet-sye/sweet-sye-app/$1"
-    }
-  ]
+  "framework": "nextjs"
 }
