remove vercel configs and update nx

--- a/nx.json
+++ b/nx.json
@@ -104,7 +104,7 @@
       "cache": true
     },
     "serve": {
-      "inputs": ["default", "^production"],
+      "inputs": ["default"],
       "cache": true
     }
   },
