--- a/apps/sweet-sye/sweet-sye-app/project.json
+++ b/apps/sweet-sye/sweet-sye-app/project.json
@@ -17,16 +17,9 @@
         "production": {}
       }
     },
-    "deploy": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "npx vercel --cwd=apps/sweet-sye/sweet-sye-app --token=$VERCEL_TOKEN --prod"
-      }
-    },
-    "serve": {
-      "executor": "@nrwl/next:server",
-      "options": {
-        "buildTarget": "my-app:build"
+    "configurations": {
+      "production": {
+        "buildTarget": "sweet-sye:build:production"
       }
     }
   }
