--- a/apps/sweet-sye/sweet-sye-app/tsconfig.json
+++ b/apps/sweet-sye/sweet-sye-app/tsconfig.json
@@ -30,7 +30,8 @@
     "../../../dist/apps/sweet-sye/sweet-sye/.next/types/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "../../../dist/apps/sweet-sye/.next/types/**/*.ts"
+    "../../../dist/apps/sweet-sye/.next/types/**/*.ts",
+    "../../../dist/apps/sweet-sye/sweet-sye-app/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
