--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.10",
+    "@nrwl/next": "^19.8.4",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
@@ -34,26 +35,27 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@nrwl/react": "^19.8.0",
-    "@nx/cypress": "19.8.0",
-    "@nx/devkit": "19.8.0",
-    "@nx/eslint": "19.8.0",
-    "@nx/eslint-plugin": "19.8.0",
-    "@nx/jest": "19.8.0",
-    "@nx/js": "19.8.0",
-    "@nx/next": "19.8.0",
-    "@nx/playwright": "19.8.0",
-    "@nx/react": "19.8.0",
-    "@nx/storybook": "19.8.0",
-    "@nx/vite": "19.8.0",
-    "@nx/web": "19.8.0",
-    "@nx/workspace": "19.8.0",
+    "@nrwl/next": "^19.8.4",
+    "@nx/cypress": "20.3.3",
+    "@nx/devkit": "20.3.3",
+    "@nx/eslint": "20.3.3",
+    "@nx/eslint-plugin": "20.3.3",
+    "@nx/jest": "20.3.3",
+    "@nx/js": "20.3.3",
+    "@nx/next": "20.3.3",
+    "@nx/playwright": "20.3.3",
+    "@nx/react": "20.3.3",
+    "@nx/storybook": "20.3.3",
+    "@nx/vite": "20.3.3",
+    "@nx/web": "20.3.3",
+    "@nx/workspace": "20.3.3",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "^8.2.8",
-    "@storybook/addon-interactions": "^8.2.8",
-    "@storybook/core-server": "^8.2.8",
+    "@storybook/addon-essentials": "8.5.2",
+    "@storybook/addon-interactions": "8.5.2",
+    "@storybook/core-server": "8.5.2",
     "@storybook/jest": "^0.2.3",
-    "@storybook/react-vite": "^8.2.8",
-    "@storybook/test-runner": "^0.21.0",
+    "@storybook/react-vite": "8.5.2",
+    "@storybook/test-runner": "0.19.1",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -77,22 +79,22 @@
     "eslint-config-next": "^15.1.6",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
-    "nx": "^20.3.3",
+    "nx": "20.3.3",
     "prettier": "^2.6.2",
     "projects": "^1.6.1",
     "storybook": "^8.2.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2",
+    "typescript": "5.6.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.14",
     "vite-plugin-dts": "^4.5.0",
