--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,22 +1,163 @@
-# This workflow will triage pull requests and apply a label based on the
-# paths that are modified in the pull request.
-#
-# To use this workflow, you will need to set up a .github/labeler.yml
-# file with configuration.  For more information, see:
-# https://github.com/actions/labeler
+# Labeler configuration for GitHub Actions
 
-name: Labeler
-on: [pull_request_target]
+# ==== Feature Labels ====
+"🌐 next.js":
+  - apps/**/next.config.js
+  - apps/**/pages/**
+  - apps/**/public/**
+  - apps/**/server.js
+  - apps/**/middleware.js
+  - apps/**/middleware.ts
+  - apps/**/next-env.d.ts
+  - "**/.next/**"
 
-jobs:
-  label:
+"⚛️ react":
+  - apps/**/components/**
+  - apps/**/hooks/**
+  - apps/**/contexts/**
+  - apps/**/pages/**
+  - "**/*.tsx"
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
+"📦 nx workspace":
+  - nx.json
+  - workspace.json
+  - tools/**
+  - project.json
+  - apps/**/project.json
+  - libs/**/project.json
 
-    steps:
-    - uses: actions/labeler@v4
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+"🛠 shared libraries":
+  - libs/**
+  - libs/**/index.ts
+  - libs/**/src/**
+
+"🎨 styling & UI":
+  - "**/*.css"
+  - "**/*.scss"
+  - "**/*.less"
+  - "**/*.sass"
+  - "**/*.tailwind.css"
+
+"🔧 TypeScript":
+  - "**/*.ts"
+  - "**/*.tsx"
+  - "**/tsconfig.json"
+  - "**/tsconfig.base.json"
+
+"🗄 API & Backend":
+  - apps/**/server/**
+  - apps/**/api/**
+  - apps/**/services/**
+  - apps/**/controllers/**
+  - libs/**/server/**
+  - libs/**/api/**
+  - libs/**/models/**
+
+"🔌 GraphQL":
+  - apps/**/graphql/**
+  - libs/**/graphql/**
+  - "**/*.graphql"
+  - "**/*.gql"
+
+"📊 state management":
+  - apps/**/store/**
+  - apps/**/redux/**
+  - apps/**/context/**
+  - libs/**/store/**
+  - libs/**/redux/**
+
+"🔋 caching & performance":
+  - apps/**/cache/**
+  - apps/**/services/cache.ts
+  - "**/redis.ts"
+  - "**/memcached.ts"
+
+"🔑 authentication":
+  - apps/**/auth/**
+  - libs/**/auth/**
+  - "**/next-auth.d.ts"
+  - "**/middleware/auth.ts"
+  - "**/middleware/auth.js"
+
+"📦 dependencies":
+  - package.json
+  - yarn.lock
+  - package-lock.json
+  - pnpm-lock.yaml
+
+"🛠️ dev dependencies":
+  - package.json
+  - "**/tsconfig.json"
+  - "**/eslint*"
+  - "**/.prettierrc"
+
+# ==== PR Type Labels ====
+"🐛 bug":
+  - "**/fix/*"
+  - "**/hotfix/*"
+  - "**/patch/*"
+
+"✨ enhancement":
+  - "**/feature/*"
+  - "**/improvement/*"
+
+"🔥 refactor":
+  - "**/refactor/*"
+
+"🚀 new feature":
+  - "**/feat/*"
+
+"🚨 breaking change":
+  - "**/breaking/*"
+
+"♻️ chore":
+  - "**/chore/*"
+  - ".github/workflows/**"
+  - "scripts/**"
+
+"💡 discussion":
+  - "**/discussion/**"
+
+"🆕 version bump":
+  - "version.txt"
+  - ".bumpversion.cfg"
+
+# ==== Testing Labels ====
+"🧪 unit tests":
+  - "**/*.test.ts"
+  - "**/*.test.tsx"
+  - "**/*.spec.ts"
+  - "**/*.spec.tsx"
+  - tests/unit/**
+
+"📈 integration tests":
+  - tests/integration/**
+
+"🔄 e2e tests":
+  - e2e/**
+
+"🚦 CI/CD":
+  - ".github/workflows/**"
+  - "nx-cloud/**"
+  - "pipeline/**"
+
+# ==== Security Labels ====
+"🛡️ security":
+  - apps/**/security/**
+  - libs/**/security/**
+  - "**/*.sec.ts"
+
+"🔒 vulnerability":
+  - "**/fix/security/*"
+
+# ==== Misc Labels ====
+"🌍 localization":
+  - locales/**
+  - translations/**
+  - "**/*.json"
+
+"🚧 work in progress":
+  - "**/wip/**"
+
+"📌 pinned":
+  - "**/pinned/**"
