--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@nx/devkit": "19.8.0",
     "@nx/eslint": "19.8.0",
     "@nx/eslint-plugin": "19.8.0",
-    "@nx/jest": "19.8.0",
-    "@nx/js": "19.8.0",
-    "@nx/next": "19.8.0",
+    "@nx/jest": "20.3.3",
+    "@nx/js": "20.3.3",
+    "@nx/next": "20.3.3",
     "@nx/playwright": "19.8.0",
     "@nx/react": "19.8.0",
     "@nx/storybook": "19.8.0",
@@ -78,11 +78,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
