--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.10",
+    "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@babel/preset-react": "^7.14.5",
     "@emotion/babel-plugin": "11.11.0",
     "@eslint/compat": "^1.1.1",
