--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "^20.3.3",
-    "prettier": "^2.6.2",
+    "nx-cloud": "^19.1.0",
+    "prettier": "^3.5.0",
     "projects": "^1.6.1",
     "storybook": "^8.2.8",
     "ts-jest": "^29.1.0",
