--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/babel-plugin": "11.11.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@nrwl/next": "^19.8.4",
     "@nrwl/react": "^19.8.0",
     "@nx/cypress": "19.8.0",
     "@nx/devkit": "19.8.0",
