stub up backend lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@xulf/backend": ["libs/backend/src/index.ts"],
       "@xulf/layouts": ["libs/layouts/src/index.ts"],
       "@xulf/ui": ["libs/ui/src/index.ts"]
     }
