--- a/nx.json
+++ b/nx.json
@@ -107,6 +107,11 @@
     "serve": {
       "inputs": ["default", "^production"],
       "cache": true
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "generators": {
