--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.10",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
@@ -24,6 +27,8 @@
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
     "react-use-precision-timer": "^3.5.5",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   },
@@ -33,13 +38,16 @@
     "@emotion/babel-plugin": "11.11.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nrwl/react": "^19.8.0",
     "@nx/cypress": "19.8.0",
     "@nx/devkit": "19.8.0",
     "@nx/eslint": "19.8.0",
     "@nx/eslint-plugin": "19.8.0",
     "@nx/jest": "19.8.0",
-    "@nx/js": "19.8.0",
+    "@nx/js": "20.4.6",
+    "@nx/nest": "^20.4.6",
     "@nx/next": "19.8.0",
     "@nx/playwright": "19.8.0",
     "@nx/react": "19.8.0",
@@ -85,6 +93,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "^20.3.3",
     "prettier": "^2.6.2",
