--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -6,6 +6,7 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@nestjs/common": "10.4.15"
   }
 }
