stub up essentials lib

--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "@storybook/test-runner": "^0.21.0",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@swc/plugin-emotion": "^2.5.67",
     "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/jest-dom": "^6.6.3",
