MOR-192 add auth

--- a/apps/xulf-ui/xulf-ui/tsconfig.json
+++ b/apps/xulf-ui/xulf-ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
+    "module": "NodeNext",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
