--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "type": "module",
+  "prisma": {
+    "schema": "libs/db/src/lib/prisma/schema.prisma"
+  },
   "dependencies": {
+    "@auth/core": "^0.38.0",
+    "@auth/prisma-adapter": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -18,12 +22,15 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.6.0",
+    "@prisma/internals": "^6.6.0",
     "@vercel/analytics": "^1.4.1",
+    "auth": "^1.2.3",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "hawk": "^9.0.2",
     "next": "^14.2.23",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
