--- a/apps/xulf-ui/xulf-ui/tsconfig.json
+++ b/apps/xulf-ui/xulf-ui/tsconfig.json
@@ -17,7 +17,10 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "include": [
     "**/*.ts",
@@ -26,7 +29,13 @@
     "**/*.jsx",
     "../../../apps/xulf-ui/xulf-ui/.next/types/**/*.ts",
     "../../../dist/apps/xulf-ui/xulf-ui/.next/types/**/*.ts",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
