--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
     "@prisma/internals": "^6.6.0",
     "@vercel/analytics": "^1.4.1",
-    "auth": "^1.2.3",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
@@ -78,6 +78,7 @@
     "@swc/jest": "~0.2.36",
     "@swc/plugin-emotion": "^2.5.67",
     "@swc/plugin-styled-components": "^1.5.67",
+    "@tailwindcss/postcss": "^4.1.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.14",
