--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hawk": "^9.0.2",
     "next": "^14.2.23",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
