MOR-202 add POST /api/orgs endpoint

--- a/apps/xulf-ui/xulf-ui/tsconfig.json
+++ b/apps/xulf-ui/xulf-ui/tsconfig.json
@@ -31,7 +31,8 @@
     "../../../dist/apps/xulf-ui/xulf-ui/.next/types/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "src/middleware.ts"
+    "src/middleware.ts",
+    "types/next-auth.d.ts"
   ],
   "exclude": [
     "node_modules",
