--- a/libs/types/tsconfig.lib.json
+++ b/libs/types/tsconfig.lib.json
@@ -1,9 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "NodeNext",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../apps/xulf-ui/xulf-ui/next-auth.d.ts"]
 }
