--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
+    "module": "NodeNext",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
