--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/vercel.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/vercel.json
@@ -2,7 +2,7 @@
   "builds": [
     {
       "src": "apps/xulf/package.json",
-      "use": "@vercel/node"
+      "use": "@vercel/next"
     }
   ],
   "routes": [
